<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/loginphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/h5"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="Enter Phone number..."
        android:inputType="textPersonName"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textColorHint="@android:color/black"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:background="@drawable/input_design"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="20dp"
        android:layout_below="@+id/loginphone"
        android:hint="Enter password.."
        android:inputType="textPassword"
        android:textColorHint="@android:color/black"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/loginphone"
        app:layout_constraintTop_toBottomOf="@+id/loginphone" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_below="@id/loginpassword"
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/buttons"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="Login"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginpassword" />

    <TextView
        android:id="@+id/Newuser"
        android:layout_below="@id/loginbutton"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="20dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:textColor="@android:color/background_dark"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="22dp"
        android:text="New User ? Create Your Account."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton" />


    <TextView
        android:id="@+id/h5"
        android:text="Login To Your Account"
        android:textColor="@android:color/background_dark"
        android:padding="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>